# Python-Journey

./: .gitignore  CLI_Todo.py  numberGuess.py  pyproject.toml
basics/: CLI_Todo.py  simpleCalculator.py
dip/: IPwithNumPy.ipynb  image.py  imageProcessing.py
