[project]
name = "image-processing-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "mahesh",email = "maheshudas2077@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "matplotlib (>=3.10.8,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
